style.css
:root {
    --banner-bg-color: #2a3347;
    --controls-bg-color: #384a73;
    --column-controls-bg-color: steelblue;
    --hiders-hover-bg-color: lightsteelblue;
    --hilite-color-1: red;
    --hilite-bg-color-1: white;
    --hilite-color-2: blue;
    --hilite-bg-color-2: white;
}

/* html, body {
    width: 100%;
} */

body {
    background-color: var(--hiders-hover-bg-color);
    color: white;
    font-family: Arial, sans-serif;
    font-size: 0.95em;
    margin: 0;
}

#results {
    color: black;
    padding: 0;
    margin: 0;
}

#results-number {
    padding-left: 15px;
    display: inline-block;
    font-family: 'Times New Roman', Times, serif;
    font-size: 0.9em;
    font-weight: 300;
    margin: -5px 0;
}

#banner {
    background-color: var(--banner-bg-color);
    padding: 15px 0 10px 23px;
}

#title {
    font-size: 1.75em;
    letter-spacing: 1px;
}

table.controls-container td {
    margin: 0;
    padding: 0 12px 0 0;
}

#controls {
    position: relative;
}

#hide-controls-div {
    background-color: var(--banner-bg-color);
}

.hiders {
    color: lightblue;
    text-align: center;
    font-size: 0.65em;
    font-weight: 1000;
    padding: 5px 0px;
    /* border-top-left-radius: 5px;
    border-top-right-radius: 5px; */
}

#hide-controls {
    background-color: var(--controls-bg-color);
    width: 145px;
    display:inline-block;
    height: 12px;
    user-select: none; 
    -webkit-user-select: none; 
    -moz-user-select: none; 
    -khtml-user-select: none;
    -ms-user-select: none;
}

#hide-controls:hover {
    background-color: var(--hiders-hover-bg-color);
    color: var(--controls-bg-color);
}

#hide-column-controls {
    background-color: var(--column-controls-bg-color);
    width: 145px;
    display:inline-block;
    height: 12px;
    margin-left: -5px;
    user-select: none; 
    -webkit-user-select: none; 
    -moz-user-select: none; 
    -khtml-user-select: none;
    -ms-user-select: none;
}

#hide-column-controls:hover {
    background-color: var(--hiders-hover-bg-color);
    color: var(--controls-bg-color);
}

#second-search {
    display: none;
}

.controls-first-column {
    vertical-align: bottom;
    width: 15px;
}

#second-search-hider {
    background-color: var(--hiders-hover-bg-color);
    border-radius: 2px;
    color: var(--banner-bg-color);
    width: 12px;
    height: 12px;
    margin: 1px 0 1px;
    padding: 0;
    font-size: 0.1em;
    user-select: none; 
    -webkit-user-select: none; 
    -moz-user-select: none; 
    -khtml-user-select: none;
    -ms-user-select: none;
}

#second-search-hider path {
    pointer-events: none;
}

#second-search-hider:hover {
    background-color: khaki;
}

input[type="color"] {
    opacity: 0;
	display: block;
	border: none;
    /* height: 12px;
    width: 12px; */
}

.picker-div {
    float: left;
    height: 12px;
    width: 12px;
    margin: 3px 0;
    border: 1px solid lightsteelblue;
    border-radius: 3px;
    opacity: 0.3;
}

#picker-1:disabled, #bg-picker-1:disabled, #picker-2:disabled, #bg-picker-2:disabled {
    visibility: hidden;
}

input.search {
    -webkit-appearance: none; 
    -moz-appearance: none; 
    appearance: none;
    font-size: 1.5em;
}

input[type="checkbox"]:disabled + label {
    color: gray;
}

select[for="match-where"]:disabled + label {
    color: gray;
}

column-names, output {
    display: block;
    margin-top: 1em;
    font-family: monospace;
}

form {
    padding: 7px 0 7px 18px;
}

div.section {
    padding: 7px 18px;
    /* width: 100%; */
}

#columnselect {
    background-color: var(--column-controls-bg-color);
    /* padding-left: 34px; */
    padding: 7px 0 7px 27px;
    margin: 0;
}

#column-control-button-adjuster {
    padding: 0;
    margin-left: -10px;
}

table#results-table {
    border-collapse: collapse;
    font-family: monospace;
    font-size: 1.1em;
    width: 99.8%;
    /* border-top: 3px solid gray; */
}

/* .sticky {
    position: fixed;
    top: 0;
    z-index: 1;
} */

#text-align-control {
    cursor: pointer;
    stroke: var(--banner-bg-color);
    stroke-width: 2;
    user-select: none;
    -webkit-user-select: none; 
    -moz-user-select: none; 
    -khtml-user-select: none;
    -ms-user-select: none;
}

th.result-index, .result-index {
    background-color: lightslategray;
    color: lightsteelblue;
    font-size: 1em;
    text-align: right;
    padding: 0 8px 0 12px;
    border: 0.5px solid lightsteelblue;
    border-collapse: collapse;
    width: 10px;
}

th {
    background-color: var(--hiders-hover-bg-color);
    color: var(--banner-bg-color);
    position: sticky;
    top: 0;
    padding: 3px 12px;
    border: 0.5px solid lightgray;
    border-collapse: collapse;
    min-width: 10px;
    z-index: 1;
}

td.results-td {
    background-color: white;
    color: black;
    position: relative;
    padding: 3px 15px;
    border: 0.5px solid lightgray;
    border-collapse: collapse;
    min-width: 20px;
}

.hilite1 {
    color: var(--hilite-color-1);
    background-color: var(--hilite-bg-color-1);
}

.hilite2 {
    color: var(--hilite-color-2);
    background-color: var(--hilite-bg-color-2);
}

div.resize {
    /* TODO: Make resizable "handle" more attractive, use hoverover tricks */
    background-color: orange;
    cursor: col-resize;
    position: absolute;
    right: 0;
    top: 0;
    user-select: none;
    -webkit-user-select: none; 
    -moz-user-select: none; 
    -khtml-user-select: none;
    -ms-user-select: none;
    width: 3px;
    height: 100%;
}

div.sort {
    cursor: pointer;
    font-weight: 500;
    font-size: 1.1em;
    color: var(--column-controls-bg-color);
    user-select: none;
    -webkit-user-select: none; 
    -moz-user-select: none; 
    -khtml-user-select: none;
    -ms-user-select: none;
    padding: 0 12px;
    width: 5px;
    height: 100%;
    display: inline-block;
    margin-left: 5px;
}

td {
    padding: 0 0.75em 0 0.25em;
}

td.search-td {
    min-width: 300px;
    padding: 0 0.25em !important;

}

td#search-logic {
    width: 30px;
    background-color: lightgray;
    padding: 1em !important;
    margin-right: 0.5em;
    /* border-radius: 1em; */
}

#search-box {
    background-color: var(--controls-bg-color);
}

#search-button {
    margin-left: -3px;
}

#search-button-outside {
    margin-left: 25px;
}

#search-input, #search-input2 {
    font-size: 0.8em;
    border-radius: 0.5em;
    width: 250px;
    margin: 5px 0;
}

#search-input:disabled, #search-input2:disabled {
    background-color: lightgray;
}

.cutoff {
    padding: 1px 0 1px 3px;
    width: 40px;
    border-radius: 0.25em;
}

.cutoff:disabled {
    background-color: lightgray;
}

.infotip {
    position: relative;
    display: inline-block;
    background-color: steelblue;
    color: white;
    font-weight: 500;
    border-radius: 1em;
    padding: 1px 3px 0;
    font-family: 'Times New Roman', Times, serif;
    font-size: 0.8em;
    font-weight: 600;
}

.infotiptext {
    visibility: hidden;
    min-width: 180px;
    background-color: #dfe2f5;
    opacity: 0.85;
    color: #1e1f21;
    font-family: Arial, sans-serif;
    font-weight: lighter;
    text-align: left;
    border-radius: 5px;
    padding: 5px 10px 7px 10px;
    margin: 2px;
    position: absolute;
    z-index: 1;
}

.infotip:hover .infotiptext {
    visibility: visible;
}

/* .th-sort-ascending {

}

.th-sort-descending {

} */

